--- a/notebooks/proyecto_sprint_3_.ipynb
+++ b/notebooks/proyecto_sprint_3_.ipynb
@@ -6,7 +6,7 @@
     "id": "E0vqbgi9ay0H"
    },
    "source": [
-    "# Déjame escuchar la música"
+    "# **Proyecto 3: Prueba de hipótesis - Déjame escuchar la música**"
    ]
   },
   {
@@ -15,7 +15,7 @@
     "id": "fhq_eyov_Zcs"
    },
    "source": [
-    "## Contenido <a id='back'></a>\n",
+    "## **Contenido <a id='back'></a>**\n",
     "\n",
     "* [Introducción](#intro)\n",
     "* [Etapa 1. Descripción de los datos](#data_review)\n",
@@ -36,19 +36,19 @@
     "id": "VUC88oWjTJw2"
    },
    "source": [
-    "## Introducción <a id='intro'></a>\n",
+    "## **Descripción del proyecto**\n",
     "Como analista de datos, tu trabajo consiste en analizar datos para extraer información valiosa y tomar decisiones basadas en ellos. Esto implica diferentes etapas, como la descripción general de los datos, el preprocesamiento y la prueba de hipótesis.\n",
     "\n",
     "Siempre que investigamos, necesitamos formular hipótesis que después podamos probar. A veces aceptamos estas hipótesis; otras veces, las rechazamos. Para tomar las decisiones correctas, una empresa debe ser capaz de entender si está haciendo las suposiciones correctas.\n",
     "\n",
     "En este proyecto, compararás las preferencias musicales de las ciudades de Springfield y Shelbyville. Estudiarás datos reales de transmisión de música online para probar la hipótesis a continuación y comparar el comportamiento de los usuarios y las usuarias de estas dos ciudades.\n",
     "\n",
-    "### Objetivo:\n",
+    "## **Objetivo**\n",
     "Prueba la hipótesis:\n",
     "1. La actividad de los usuarios y las usuarias difiere según el día de la semana y dependiendo de la ciudad.\n",
     "\n",
     "\n",
-    "### Etapas\n",
+    "## **Etapas**\n",
     "Los datos del comportamiento del usuario se almacenan en el archivo `/datasets/music_project_en.csv`. No hay ninguna información sobre la calidad de los datos, así que necesitarás examinarlos antes de probar la hipótesis.\n",
     "\n",
     "Primero, evaluarás la calidad de los datos y verás si los problemas son significativos. Entonces, durante el preprocesamiento de datos, tomarás en cuenta los problemas más críticos.\n",
